--- a/src/main/App.css
+++ b/src/main/App.css
@@ -35,11 +35,12 @@ body {
   width: 100vw;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows:150px 60px 1fr 100px;
+  grid-template-rows:150px 60px 1fr 100px 100px;
   grid-template-areas:
     'logo' 
     'header'
     'content'
+    'footerLogo'
     'footer';
 }
 
@@ -57,6 +58,10 @@ body {
   margin:20px 50px;
 }
 
+.footerLogo {
+  grid-area: footerLogo;
+}
+
 .footer {
   grid-area: footer;
 }
@@ -67,6 +72,10 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+.d-none {
+  display: none;
 }
 
 @media(min-width: 876px) {
