--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,7 +4,7 @@
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    width: 100vw;
+    width: 100%;
     font-size: 1.2em;
 
 
