--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,7 @@
 .footer {
     background-color: var(--bg-header);
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
     text-align: center;
@@ -9,6 +10,26 @@
 
 
     margin-top: 15px;
+}
+
+/* @media(max-width: 700px ) {
+    .footer {
+        display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    }
+    p {
+        display: none;
+    }
+} */
+
+.footer-right {
+    width: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .fa-heart {
