--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -12,20 +12,24 @@
     justify-content: center;
 }
 
-/* .menu {
-    height: var(--header-height);
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-} */
+@media(max-width: 840px ) {
+    .header {
+        width: 100%;
+        margin: 0;
+        /* margin-top: 25px; */
+        border-radius: 0;
+        border-top: var(--logo-font-color) solid 1px;
+    }
+    .menu-item {
+        display: none;
+        padding: 0px;
+    }
+}
 
 .menu-item {
     display: inline;
     text-align: center;
     justify-content: center;
-
-    /* margin: 0px 15px; */
     padding: 10px 40px;
     height: var(--header-height);
     width: 50px;
